--- a/text/references.bib
+++ b/text/references.bib
@@ -556,7 +556,7 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
 }
 
 @article{breast-subtypes3,
-  author = {Zhang, M. and Lee, A.V. and Rosen, J.M.}
+  author = {Zhang, M. and Lee, A.V. and Rosen, J.M.},
   title = {The cellular origin and evolution of breast cancer},
   journal = {CSH Perspectives in Medicine},
   year = {2017},
