--- a/code/figure1.Rmd
+++ b/code/figure1.Rmd
@@ -185,7 +185,6 @@ gc()
 ```
 <div style="text-align: right"> Reactome Pathway Creation </div>
 ```{r reactome-pathway-creation, eval=FALSE}
-load("../data/gdc_tumor_coding_complete.Rdata")
 load("../data/gene_data.Rda")
 ## Preparing level_0 to level_1 pathway conversion table. level_0 is the master pathway. level_1 is the parent pathway
 main2first <- fread(file = "../data/reactome_main2first_level.txt", header = T, sep = "\t")
@@ -204,34 +203,34 @@ ensembl2reactome <- fread(file = "../data/Ensembl2Reactome_All_Levels.txt", head
 ensembl2reactome <- ensembl2reactome %>% .[,c(1:2,4)] %>% ## select columns ensembl, pathway_id, pathway_name columns
   'colnames<-' (c("ENSEMBL", "PATH_ID", "PATH_NAME")) %>% ## rename colnames
   .[grep(pattern = "-HSA-", .$PATH_ID),] %>% ## keep human pathways
-  .[.$PATH_ID %in% first2second$second_level,] ## include only second level pathways
+  .[.$PATH_ID %in% first2second$second_level,] %>% ## include only second level pathways
+  left_join(., main2first, by = c("PATH_ID" = "first_level")) %>% distinct() %>% 
+  left_join(., ensembl2reactome[,c(2,4)], by = c("main_level" = "V2")) %>% distinct()
 
-## Removing pathways that are not molecular functions such as pathways that related to disease, defect, bacteria, disorder, myosin and etc
-rm_pathways <- c("R-HSA-1222499", "R-HSA-1226099", "R-HSA-1300642", "R-HSA-1300645", "R-HSA-162906",  "R-HSA-1643713", "R-HSA-168254",
-                 "R-HSA-212436", "R-HSA-2160456", "R-HSA-2219528", "R-HSA-2474795", "R-HSA-2534343", "R-HSA-2644603", "R-HSA-2978092",
-                 "R-HSA-3296482", "R-HSA-3304351", "R-HSA-3560782", "R-HSA-3781860", "R-HSA-388396",  "R-HSA-3906995", "R-HSA-4791275",
-                 "R-HSA-5339562", "R-HSA-5387390", "R-HSA-5545483", "R-HSA-5576886", "R-HSA-5576890", "R-HSA-5576892", "R-HSA-5576893",
-                 "R-HSA-5576894", "R-HSA-5578768", "R-HSA-5578775", "R-HSA-5579029", "R-HSA-5602358", "R-HSA-5609975", "R-HSA-5619084",
-                 "R-HSA-5619102", "R-HSA-5632927", "R-HSA-5632928", "R-HSA-5632968", "R-HSA-5632987", "R-HSA-5663084", "R-HSA-5687613",
-                 "R-HSA-6802957", "R-HSA-8862803", "R-HSA-8876384", "R-HSA-9005891", "R-HSA-9605310", "R-HSA-9616333", "R-HSA-9616334",
-                 "R-HSA-9629232", "R-HSA-9630750", "R-HSA-9632693", "R-HSA-9645722", "R-HSA-9646303", "R-HSA-9646304")
+## Filtering pathways not relevant to our analysis by keywords
+filtered_ensembl2reactome <- ensembl2reactome %>% filter(!V4 %in% c("Disease", "Muscle contraction", "Reproduction")) ## Pathways in disease, muscle contraction and reproduction parent pathway were removed
 
-## Ensembl to reactome pathway lookup table
-gene2level2_lookup <- ensembl2reactome %>% dplyr::select(-PATH_NAME) %>% ## remove PATH_NAME col
+toMatch <- c("disease", "defect", "cancer", "oncogenic", "disorder", "infection", "mutant", "bacteria", "listeria", "loss") ## pathways with the following key terms were removed.
+
+filtered_ensembl2reactome <- filtered_ensembl2reactome %>% mutate(l_pathname = tolower(.$PATH_NAME)) %>% 
+  .[!grep(paste(toMatch,collapse="|"), .$l_pathname),]
+
+filtered_ensembl2reactome <- filtered_ensembl2reactome %>% .[which(!.$PATH_ID %in% c("R-HSA-212436", "R-HSA-388396")),] ## Removing Generic Transcription Pathway and GPCR downstream signalling as they are broad pathways
+
+gene2level2_lookup <- filtered_ensembl2reactome %>% dplyr::select(ENSEMBL, PATH_ID) %>% ## remove PATH_NAME col
   .[.$ENSEMBL %in% gene_data$ensembl_gene_id,] %>% ## only include genes that are in the gene_data 
   mutate(member = 1) %>% ## add a column for ensembl to pathway membership
   distinct() %>% ## keep unique rows
   spread(data = ., key = "PATH_ID", value = "member") %>% ## long to wide format
   column_to_rownames(var = "ENSEMBL") %>% ## ensembl_id as rownames
-  .[,!names(.) %in% rm_pathways] %>% ## filter rm_pathways from lookup table
   replace(is.na(.), values = 0) ## replace NA's with 0's
-#save(gene2level2_lookup, file = "gene2_level2_lookup.Rda")
+#save(gene2level2_lookup, file = "../data/gene2_level2_lookup.Rda")
 ## Pathway names to level 2 lookup table
-pathname2level2 <- ensembl2reactome %>% dplyr::select(-ENSEMBL) %>% ## remove ENSEMBL col
+pathname2level2 <- filtered_ensembl2reactome %>% dplyr::select(PATH_ID, PATH_NAME) %>% ## remove ENSEMBL col
   .[.$PATH_ID %in% names(gene2level2_lookup),] %>% ## only include pathways in gene2level2_lookup
   distinct(.) ## keep unique rows
-#save(pathname2level2, file = "pathname2level2.Rda")
-rm(rm_pathways, ensembl2reactome, main2first, first2second)
+#save(pathname2level2, file = "../data/pathname2level2.Rda")
+rm(list = ls(all.names = T))
 gc()
 ```
 <div style="text-align: right"> Filter tissue-specific low expressed genes </div>
