--- a/text/discussion.Rmd
+++ b/text/discussion.Rmd
@@ -23,18 +23,19 @@ elements exist with oncogenic or tumor suppressor activity [@deesMuSiC2012;
 @tamboreroOncodriveCLUST2013;
 @lawrenceDiscoverySaturationAnalysis2014;
 @kumarStatisticallyIdentifyingTumor2015; @jiangWITER2019;
-@zhaoModelingPositive2019; @non-coding-mutations-Zhang]. Hence, we sought to
-simplify the problem by investigating cancer as a disease of basic cellular and
+@zhaoModelingPositive2019; @noncoding-mutations-Zhang]. Hence, we sought to
+simplify the problem by employing a "knowledge-base driven analysis"
+[@pathways-Atul-Butte], investigating cancer as a disease of basic cellular and
 biochemical pathways, which we accomplished by translating gene-level mutations
-into pathway level disruptions. Our approach differs from previously proposed
+into pathway level disruptions. Our approach differs from previously described
 methods [@PATHNET] in that we chose to focus on the pathway as the unit of
 disruption instead of the gene, employing the conceit that individual mutations
-may be sufficient to disrupt entire pathways (as is often the case with
-drivers). Rather than evaluating the burden of mutations on each pathway within
-or across tumors, which can be biased by the number of genes or the coverage of
-pathway-linked genes in the genome, and which we find to be relatively uniformly
-distributed, we scored each pathway in binary fashion, allowing one mutation or
-multiple mutations to count equally for each sample.
+may be sufficient to disrupt or misdirect pathway activity (as is often the case
+with driver mutations). Rather than evaluating the burden of mutations on each
+pathway within or across tumors, which can be biased by the number of genes or
+the coverage of pathway-linked genes in the genome, we scored each pathway in
+binary fashion, allowing one mutation or multiple mutations to count equally for
+each sample.
 
 To our knowledge, this approach has not previously been attempted in the
 literature in spite of its relative simplicity. We limited our analysis to
@@ -45,19 +46,19 @@ repair. Our method of filtration differs from the "rank-and-cut" method of
 [@PCAWG-MAIN] but represents a reasonable attempt to account for the same
 biases. We also filtered genes on the basis of pathway membership in biochemical
 pathways, excluding curated genesets related to diseases, syndromes, or classes
-of proteins ( _e.g._ transcription factors). We chose this approach to limit
-redundancy, which is already high in the remaining pathways for some driver
-genes, and to exclude biologically unrelated collections of genes. We do not
-account for non-coding mutations, amplification events or structural variants,
-though we hope to include them in subsequent studies (see below). Our
-pathway-centric analysis also allows us to circumvent the problem that some
-cancer-promoting mutations likely occur at low enough frequencies as to be
-indistinguishable from background. Previous attempts to capture these
-associations better using Bayesian networks have yielded important new insights
-into this problem and new genes [@hornNetSigNetworkbasedDiscovery2018] that
-would not have been possible with traditional analysis, supporting the case that
-pathway-centric approaches like ours have the potential to increase statistical
-power.
+of proteins ( _e.g._ transcription factors) which are potentially problematic
+[@pathways-Atul-Butte]. We chose this approach to limit redundancy, which is
+already high in the remaining pathways for some driver genes, and to exclude
+biologically unrelated collections of genes. We do not account for non-coding
+mutations, amplification events or structural variants, though we hope to
+include them in subsequent studies (see below). Our pathway-centric analysis
+also allows us to circumvent the problem that some cancer-promoting mutations
+likely occur at low enough frequencies as to be indistinguishable from
+background. Previous attempts to capture these associations better using
+Bayesian networks have yielded important new insights into this problem and new
+genes [@hornNetSigNetworkbasedDiscovery2018] that would not have been possible
+with traditional analysis, supporting the case that pathway-centric approaches
+like ours have the potential to increase statistical power.
 
 The hypothesis that cancer is the result of dysfunction from
 a limited number of basic cellular processes common to all living human cells
