--- a/text/references.bib
+++ b/text/references.bib
@@ -453,7 +453,7 @@
 }
 
 @article{PCAWG-MAIN,
-  author = {Consortium},
+  author = {Consortium PCAWG},
   title = {Pan-cancer analysis of whole genomes},
   journal = {Nature},
   year = {2020},
@@ -565,4 +565,16 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   pages = {a027128},
   pmid = {28062556},
   doi = {10.1101/cshperspect.a027128}
+}
+
+@article{pathways-Atul-Butte,
+  author = {Khatri, P. and Sirota, M. and Butte, A.J.},
+  title = {Ten Years of Pathway Analysis: Current Approaches and Outstanding Challenges},
+  journal = {PLoS Computational Biology},
+  year = {2012},
+  volume = {8},
+  number = {2},
+  pages = {e1002375},
+  pmid = {22383865},
+  doi = {10.1371/journal.pcbi.1002375}
 }
